src/test/scala/au/edu/mq/comp/perentiemq/iml/syntax/funcerr4.out
src/test/scala/au/edu/mq/comp/perentiemq/iml/syntax/funcerr4.iml:3:1: error: non block statement expected
}
^

